syntax = "proto3";

package image_service.proto;

option go_package = "pos/image_service/pb";

message UploadImageRequest {
    string image_data = 2;
    string image_name = 3;
}

message UploadImageResponse {
    string image_url = 1;
}